# viper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  run.py  viper.desktop
viper/: __init__.py  __main__.py  app.py  constants.py  editor.py  terminal.py  theme.py
