[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "viper-ide"
version = "1.1.0"
description = "A minimal, dark-themed Python compiler for Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Nafiul Islam"}]
keywords = ["python", "ide", "compiler", "editor", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

[project.urls]
Repository = "https://github.com/nafiul-afk/viper"
Issues = "https://github.com/nafiul-afk/viper/issues"

[project.scripts]
viper = "viper.__main__:main"

[project.gui-scripts]
viper-gui = "viper.__main__:main"

[tool.setuptools.packages.find]
include = ["viper*"]
